chg: updated openapi from Spring
