# src/app/rest/model/event-public.ts
@@ -1,34 +1,0 @@
-/**
- * OpenAPI definition
- *
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-export interface EventPublicDTO { 
-    createdAt?: string;
-    uuid?: string;
-    name: string;
-    details: string;
-    place: string;
-    eventType: EventPublicDTO.EventTypeEnum;
-    regStartAt: string;
-    regEndAt: string;
-    imageUrl?: string;
-    discountType?: string;
-}
-export namespace EventPublicDTO {
-    export type EventTypeEnum = 'EVENT' | 'CAMP' | 'SCHOOL_CLIMB' | 'ECA';
-    export const EventTypeEnum = {
-        Event: 'EVENT' as EventTypeEnum,
-        Camp: 'CAMP' as EventTypeEnum,
-        SchoolClimb: 'SCHOOL_CLIMB' as EventTypeEnum,
-        Eca: 'ECA' as EventTypeEnum
-    };
-}
-
-
